[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentps"
version = "0.2.0"
description = "ps-like inventory of CLI coding-agent sessions"
requires-python = ">=3.11"

[project.scripts]
agentps = "agentps.cli:main"

[tool.setuptools.packages.find]
include = ["agentps*"]
